Make .meter-text nowrap to prevent truncation
* Add white-space: nowrap to .meter-text to prevent the meter text from
  being cut off when the meter is very short and its content is long
  (mainly an issue with the experience bar, which can easily have a bar
  graph symbol plus one four-digit number over another e.g. 1,234 /
  5,678)

--- a/public/css/header.styl
+++ b/public/css/header.styl
@@ -158,6 +158,7 @@
     top: 0
     z-index: 4
     line-height: 1.618
+    white-space: nowrap
     &.value
       right: 0.382em
       
